Adicionei um paragráfo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit hic ipsam officia, animi vitae similique rerum a, odit at delectus totam placeat, facilis quidem. Nesciunt autem amet distinctio nostrum illo.
     </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit error laboriosam exercitationem, labore unde porro quos voluptatem pariatur odit necessitatibus dignissimos officia ratione impedit quibusdam qui cupiditate sequi! Aperiam, eos.</p>
 </body>
 </html>
